<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.hc05coonect.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/Forward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/voice_forward"
                android:inputType="text"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/error_forward"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/Backward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/voice_backward"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/error_backward"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/Right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/voice_right"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/error_right"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/Left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/voice_left"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/error_left"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/Stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/voice_stop"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/error_stop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:maxLines="8"
            android:text="@string/voice_note"
            android:textColor="@android:color/holo_red_light"
            android:paddingBottom="15dp"
            android:textSize="12sp" />

        <FrameLayout style="@style/Button_Frame"
            android:layout_width="wrap_content"
            android:layout_height="42dp">

            <Button
                android:id="@+id/save_proceed"
                style="@style/Change_settings_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/move_to_voice_mode" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
